added letter animation

--- a/public/home.html
+++ b/public/home.html
@@ -13,8 +13,12 @@
 </head>
 
 <body>
-  <div id='cover'>
-
+  <div id='cover' class='justify-content-center'>
+    <h1 class="ml6">
+      <span class="text-wrapper">
+        <span class="letters" id='cover-title'>Cameron J. Cardinale</span>
+      </span>
+    </h1>
   </div>
   <div id='show-hide'>
     <main id='main-div'>
@@ -224,6 +228,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.6.0/js/bootstrap.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@mojs/core"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
 <script src='/assets/js/script.js'></script>
 <script src='/assets/js/animation.js'></script>
 </body>
