added pulsing letters

--- a/public/home.html
+++ b/public/home.html
@@ -19,6 +19,11 @@
         <span class="letters" id='cover-title'>Cameron J. Cardinale</span>
       </span>
     </h1>
+    <h1 class="ml6">
+      <span class="text-wrapper">
+        <span class="letters" id='cover-click'>click anywhere to enter</span>
+      </span>
+    </h1>
   </div>
   <div id='show-hide'>
     <main id='main-div'>
