--- a/public/home.html
+++ b/public/home.html
@@ -53,10 +53,11 @@
                 Projects
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                <a class="dropdown-item" href="https://ccardinale98.github.io/travel-assistant/">Travel Assistant</a>
-                <a class="dropdown-item" href="https://ccardinale98.github.io/Password-Generator/">Password Generator</a>
-                <a class="dropdown-item" href="https://ccardinale98.github.io/day-scheduler/">Day Scheduler</a>
+                <a class="dropdown-item" href="https://github.com/ccardinale98/project-bid-board">Government Project Board</a>
                 <a class="dropdown-item" href="https://ccardinale98.github.io/weather-dashboard/">Weather Dashboard</a>
+                <a class="dropdown-item" href="https://ccardinale98.github.io/day-scheduler/">Day Scheduler</a>
+                <a class="dropdown-item" href="https://github.com/ccardinale98/travel-support">Travel Assistant</a>
+                <a class="dropdown-item" href="https://ccardinale98.github.io/Password-Generator/">Password Generator</a>
               </div>
             </li>
             <li class="nav-item">
@@ -224,6 +225,12 @@
       <div id='experience-desc'>
         <!-- populated by js -->
       </div>
+
+    <footer>
+      <p1>ccardinale98@gmail.com</p1>
+      <p1>https://www.linkedin.com/in/ccardinale98/</p1>
+      <p1>https://github.com/ccardinale98</p1>
+    </footer>
   </div>  
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
