added technologies used

--- a/public/home.html
+++ b/public/home.html
@@ -74,6 +74,7 @@
           </div>
           <h1>Cameron J. Cardinale</h1>
           <p class="lead">I am a full-stack web developer.</p>
+          <p class="lead">ccardinale98@gmail.com</p>
           <hr class="my-4">
           <p>Scroll to learn more about me.</p>
         </div>
@@ -116,7 +117,8 @@
               <div class="col-md-8">
                 <div class="card-body">
                   <h5 class="card-title">Weather Dashboard</h5>
-                  <p class="card-text">This application is a one-stop-spot for all relevant weather information in a searched City. The information provided includes temperature, UVI, wind-speed, and humidity over the next 5 hours and the next 5 days.</p>
+                  <p class="card-text">A simple weather forecasting application that provides the current weather, an hourly forecast, and a 5-day future forecast for a given location.</p>
+                  <p class="card-text">HTML, CSS, JS, Bootstrap</p>
                   <a href="https://ccardinale98.github.io/weather-dashboard/" class="btn btn-primary">Demo</a>
                   <a href="https://github.com/ccardinale98/weather-dashboard" class="btn btn-primary">Github</a>
                 </div>
@@ -131,7 +133,8 @@
               <div class="col-md-8">
                 <div class="card-body">
                   <h5 class="card-title">Government Project Board</h5>
-                  <p class="card-text">Government institutions without in-house labor capabilities to complete a project need a place to post projects for contractors to bid on. The Government Project Board allows institutions to create an account and post projects to be bid on, along with approving bids made on those projects. Contractors can also sign up and make bids on the posted projects.</p>
+                  <p class="card-text">A place where institutions without in-house labor capabilities can post projects for contractors to bid on.</p>
+                  <p class="card-text">HTML, CSS, JS, Bootstrap, Node.js, Express.js, MySQL, JQuery</p>
                   <a href="https://project-bid-board.herokuapp.com/" class="btn btn-primary">Demo</a>
                   <a href="https://github.com/ccardinale98/project-bid-board" class="btn btn-primary">Github</a>
                 </div>
@@ -146,7 +149,8 @@
               <div class="col-md-8">
                 <div class="card-body">
                   <h5 class="card-title">Day Scheduler</h5>
-                  <p class="card-text">The day scheduler provides the user with a time block for each hour between and including 9AM through 10PM. The user can save tasks to do for each hour. The user will also be shown if the time block is in the past, present, or future relative to the current hour.</p>
+                  <p class="card-text">A 9-5 scheduler for saving and editing tasks to be completed over the workday. Each time block is color-coded to indicate whether it is past, present, or future.</p>
+                  <p class="card-text">HTML, CSS, JS, Bootstrap</p>
                   <a href="https://ccardinale98.github.io/day-planner/" class="btn btn-primary">Demo</a>
                   <a href="https://github.com/ccardinale98/day-planner" class="btn btn-primary">Github</a>
                 </div>
@@ -161,7 +165,8 @@
               <div class="col-md-8">
                 <div class="card-body">
                   <h5 class="card-title">Travel Assistant</h5>
-                  <p class="card-text">This is a website that will give you a 5 day weather forecast and future Ticketmaster events for a desired destination city. There is also an exchange rate calculator included.</p>
+                  <p class="card-text">A web page that allows the user to select a travel destination and a date of travel. The user will then be provided with the weather forecast in the destination city and Ticketmaster events happening there during the selected timeframe.</p>
+                  <p class="card-text">HTML, CSS, JS, Bootstrap</p>
                   <a href="https://ccardinale98.github.io/travel-support/" class="btn btn-primary">Demo</a>
                   <a href="https://github.com/ccardinale98/travel-support" class="btn btn-primary">Github</a>
                 </div>
@@ -225,13 +230,7 @@
       <div id='experience-desc'>
         <!-- populated by js -->
       </div>
-
-    <footer>
-      <p1>ccardinale98@gmail.com</p1>
-      <p1>https://www.linkedin.com/in/ccardinale98/</p1>
-      <p1>https://github.com/ccardinale98</p1>
-    </footer>
-  </div>  
+  </div> 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.6.0/js/bootstrap.min.js"></script>
