added techs known

--- a/public/home.html
+++ b/public/home.html
@@ -95,13 +95,14 @@
         <i class="fab fa-node-js"> Node.js</i>
 
         <h1 id='skillset'>Frameworks and Other Technologies</h1>
-        <i> Express</i>
+        <i> Express.js</i>
         <i> MySQL</i>
         <i> MERN</i>
         <i> Handlebars.js</i>
-        <i> JQuery</i>
+        <i> jQuery</i>
         <i> Jest</i>
         <i> React</i>
+        <i> MongoDB</i>
       </div>
     </div>
 
