started adding filter

--- a/public/home.html
+++ b/public/home.html
@@ -97,8 +97,6 @@
         <h1 id='skillset'>Frameworks and Other Technologies</h1>
         <i> Express.js</i>
         <i> MySQL</i>
-        <i> MERN</i>
-        <i> Handlebars.js</i>
         <i> jQuery</i>
         <i> Jest</i>
         <i> React</i>
@@ -109,6 +107,22 @@
     <div id='projects'>
       <div class='container' id='projects-container'>
         <h1 class='row' id='projects-title'>Projects</h1>
+        <div id='filter'>
+          <p1 id='filter-title'>Filter by technology used</p1>
+        </div>
+        <div id=filter-buttons>
+          <button class='button' id='html-filter' type='button'>HTML</button>
+          <button class='button' id='css-filter' type='button'>CSS</button>
+          <button class='button' id='js-filter' type='button'>JavaScript</button>
+          <button class='button' id='bootstrap-filter' type='button'>Bootstrap</button>
+          <button class='button' id='node-filter' type='button'>Node.js</button>
+          <button class='button' id='express-filter' type='button'>Express.js</button>
+          <button class='button' id='mysql-filter' type='button'>MySQL</button>
+          <button class='button' id='mongo-filter' type='button'>MongoDB</button>
+          <button class='button' id='jquery-filter' type='button'>JQuery</button>
+          <button class='button' id='react-filter' type='button'>React</button>
+          <button class='button' id='jest-filter' type='button'>Jest</button>
+        </div>
         <div class='row' id='cards-row'>
           <div class="card mb-3" id='weather-card' style="max-width: 540px;">
             <div class="card-img row no-gutters">
@@ -119,7 +133,6 @@
                 <div class="card-body">
                   <h5 class="card-title">Weather Dashboard</h5>
                   <p class="card-text">A simple weather forecasting application that provides the current weather, an hourly forecast, and a 5-day future forecast for a given location.</p>
-                  <p class="card-text">HTML, CSS, JS, Bootstrap</p>
                   <a href="https://ccardinale98.github.io/weather-dashboard/" class="btn btn-primary">Demo</a>
                   <a href="https://github.com/ccardinale98/weather-dashboard" class="btn btn-primary">Github</a>
                 </div>
@@ -135,7 +148,6 @@
                 <div class="card-body">
                   <h5 class="card-title">Government Project Board</h5>
                   <p class="card-text">A place where institutions without in-house labor capabilities can post projects for contractors to bid on.</p>
-                  <p class="card-text">HTML, CSS, JS, Bootstrap, Node.js, Express.js, MySQL, JQuery</p>
                   <a href="https://project-bid-board.herokuapp.com/" class="btn btn-primary">Demo</a>
                   <a href="https://github.com/ccardinale98/project-bid-board" class="btn btn-primary">Github</a>
                 </div>
@@ -151,7 +163,6 @@
                 <div class="card-body">
                   <h5 class="card-title">Day Scheduler</h5>
                   <p class="card-text">A 9-5 scheduler for saving and editing tasks to be completed over the workday. Each time block is color-coded to indicate whether it is past, present, or future.</p>
-                  <p class="card-text">HTML, CSS, JS, Bootstrap</p>
                   <a href="https://ccardinale98.github.io/day-planner/" class="btn btn-primary">Demo</a>
                   <a href="https://github.com/ccardinale98/day-planner" class="btn btn-primary">Github</a>
                 </div>
@@ -167,7 +178,6 @@
                 <div class="card-body">
                   <h5 class="card-title">Travel Assistant</h5>
                   <p class="card-text">A web page that allows the user to select a travel destination and a date of travel. The user will then be provided with the weather forecast in the destination city and Ticketmaster events happening there during the selected timeframe.</p>
-                  <p class="card-text">HTML, CSS, JS, Bootstrap</p>
                   <a href="https://ccardinale98.github.io/travel-support/" class="btn btn-primary">Demo</a>
                   <a href="https://github.com/ccardinale98/travel-support" class="btn btn-primary">Github</a>
                 </div>
