--- a/public/home.html
+++ b/public/home.html
@@ -121,30 +121,14 @@
           <button class='button' id='node-filter' type='button'>Node.js</button>
           <button class='button' id='express-filter' type='button'>Express.js</button>
           <button class='button' id='mysql-filter' type='button'>MySQL</button>
-          <!-- <button class='button' id='mongo-filter' type='button'>MongoDB</button> -->
+          <button class='button' id='mongo-filter' type='button'>MongoDB</button>
           <button class='button' id='jquery-filter' type='button'>JQuery</button>
-          <!-- <button class='button' id='react-filter' type='button'>React</button>
-          <button class='button' id='jest-filter' type='button'>Jest</button> -->
+          <button class='button' id='react-filter' type='button'>React</button>
           <button class='button' id='api-filter' type='button'>REST API</button>
           <button class='button' id='server-filter' type='button'>Dedicated Server</button>
           <button class='button' id='inquirer-filter' type='button'>Inquirer</button>
         </div>
         <div class='row' id='cards-row'>
-          <div class="card mb-3 api-calls jquery bootstrap" id='weather-card' style="max-width: 540px;">
-            <div class="card-img row no-gutters">
-              <div class="card-img col-md-4">
-                <img src="https://images.pexels.com/photos/209831/pexels-photo-209831.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="clouds" class='img'>
-              </div>
-              <div class="col-md-8">
-                <div class="card-body">
-                  <h5 class="card-title">Weather Dashboard</h5>
-                  <p class="card-text">A simple weather forecasting application that provides the current weather, an hourly forecast, and a 5-day future forecast for a given location.</p>
-                  <a href="https://ccardinale98.github.io/weather-dashboard/" class="btn btn-primary">Demo</a>
-                  <a href="https://github.com/ccardinale98/weather-dashboard" class="btn btn-primary">Github</a>
-                </div>
-              </div>
-            </div>
-          </div>
           <div class="card mb-3 jquery express mysql session node server api-calls" id='gov-card' style="max-width: 540px;">
             <div class="card-img row no-gutters">
               <div class="card-img col-md-4">
@@ -156,6 +140,36 @@
                   <p class="card-text">A place where institutions without in-house labor capabilities can post projects for contractors to bid on.</p>
                   <a href="https://project-bid-board.herokuapp.com/" class="btn btn-primary">Demo</a>
                   <a href="https://github.com/ccardinale98/project-bid-board" class="btn btn-primary">Github</a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="card mb-3 express mongo node server api-calls react" id='store-card' style="max-width: 540px;">
+            <div class="card-img row no-gutters">
+              <div class="card-img col-md-4">
+                <img src="https://t4.ftcdn.net/jpg/03/13/04/05/360_F_313040520_7HWUhSrLv2EaHI1zeCHJd5w3IFJ3MYJJ.jpg" alt="gaming pc" class='img'>
+              </div>
+              <div class="col-md-8">
+                <div class="card-body">
+                  <h5 class="card-title">Electronics Store</h5>
+                  <p class="card-text">A computer parts store that offers users a place to buy pc components and/or plan out a new pc build.</p>
+                  <!-- <a href="https://project-bid-board.herokuapp.com/" class="btn btn-primary">Demo</a> -->
+                  <a href="https://github.com/ccardinale98/electronics-store" class="btn btn-primary">Github</a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="card mb-3 api-calls jquery bootstrap" id='weather-card' style="max-width: 540px;">
+            <div class="card-img row no-gutters">
+              <div class="card-img col-md-4">
+                <img src="https://images.pexels.com/photos/209831/pexels-photo-209831.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="clouds" class='img'>
+              </div>
+              <div class="col-md-8">
+                <div class="card-body">
+                  <h5 class="card-title">Weather Dashboard</h5>
+                  <p class="card-text">A simple weather forecasting application that provides the current weather, an hourly forecast, and a 5-day future forecast for a given location.</p>
+                  <a href="https://ccardinale98.github.io/weather-dashboard/" class="btn btn-primary">Demo</a>
+                  <a href="https://github.com/ccardinale98/weather-dashboard" class="btn btn-primary">Github</a>
                 </div>
               </div>
             </div>
