--- a/public/home.html
+++ b/public/home.html
@@ -29,10 +29,10 @@
     <main id='main-div'>
       <nav id='social-bar'>
         <ul>
-            <li><a href="mailto:ccardinale98@gmail.com"><i class="fas fa-envelope-square"></i><span>Email</span></a></li>
-            <li><a href="https://www.linkedin.com/in/ccardinale98/"><i class="fab fa-linkedin-in"></i><span>Linkedin</span></a></li>
-            <li><a href="https://github.com/ccardinale98"><i class="fab fa-github"></i><span>Github</span></a></li>
-            <li><a href="https://docs.google.com/document/d/1utMIv-T48NfbuozhHz0hRBlnSLK-crlhJ9vPz0HHwGI/edit?usp=sharing"><i class="fab fa-google-drive"></i><span>Resume</span></a></li>
+            <li><a href="mailto:ccardinale98@gmail.com"><i class="fas fa-envelope-square social"></i><span>Email</span></a></li>
+            <li><a href="https://www.linkedin.com/in/ccardinale98/"><i class="fab fa-linkedin-in social"></i><span>Linkedin</span></a></li>
+            <li><a href="https://github.com/ccardinale98"><i class="fab fa-github social"></i><span>Github</span></a></li>
+            <li><a href="https://docs.google.com/document/d/1utMIv-T48NfbuozhHz0hRBlnSLK-crlhJ9vPz0HHwGI/edit?usp=sharing"><i class="fas fa-file social"></i><span>Resume</span></a></li>
         </ul>
       </nav>
       <nav id='navbar' class="navbar navbar-dark bg-#0E0B16">
@@ -74,7 +74,7 @@
           </div>
           <h1>Cameron J. Cardinale</h1>
           <p class="lead">I am a full-stack web developer.</p>
-          <p class="lead">ccardinale98@gmail.com</p>
+          <p class="lead">Click the left icons for social media and resume.</p>
           <hr class="my-4">
           <p>Scroll to learn more about me.</p>
         </div>
@@ -83,8 +83,8 @@
 
     <div class='container' id='about-me'>
       <h1 id='about-me-h1'>About Me</h1>
-      <p1 id='about-me-p1'>Hi, my name is Cameron. I am a computer enthusiast who loves to code and learn new technologies. In July 2021 I enrolled in the Rutgers Coding Bootcamp to learn as much as I can about full-stack development with HTML, CSS, and JavaScript. In the past I have dabbled with python
-        for back-end development. I am proficient in numerous JavaScript frameworks, MVCs, and SQLs.
+      <p1 id='about-me-p1'>Hi, my name is Cameron. I am a computer enthusiast who loves to code and learn new technologies. In July 2021 I enrolled in the Rutgers Coding Bootcamp to learn as much as I can about full-stack development with HTML, CSS, and JavaScript. I am proficient in numerous JavaScript frameworks, and SQLs. In the past I have dabbled with python
+        for back-end development and I am currently learning C#.
       </p1>
       <div id='skillset-div'>
         <h1 id='skillset'>Skillset</h1>
@@ -93,7 +93,7 @@
         <i class="fab fa-css3-alt"> CSS3</i>
         <i class="fab fa-bootstrap"> Bootstrap</i>
         <i class="fab fa-node-js"> Node.js</i>
-        <i class="fab fa-github"> Github</i>
+        <i class="fab fa-github"> Git</i>
 
         <h1 id='skillset'>Frameworks and Other Technologies</h1>
         <i> Heroku</i>
@@ -293,9 +293,9 @@
 
     <footer>
       <ul>
-        <li><a href='mailto:ccardinale98@gmail.com'>ccardinale98@gmail.com</a></li>
-        <li><a href='https://www.linkedin.com/in/ccardinale98/'>linkedin.com/in/ccardinale98</a></li>
-        <li><a href='https://github.com/ccardinale98'>github.com/ccardinale98</a></li>
+        <li><a class="footer-link" href='mailto:ccardinale98@gmail.com'>ccardinale98@gmail.com</a></li>
+        <li><a class="footer-link" href='https://www.linkedin.com/in/ccardinale98/'>linkedin.com/in/ccardinale98</a></li>
+        <li><a class="footer-link" href='https://github.com/ccardinale98'>github.com/ccardinale98</a></li>
       </ul>
     </footer>
   </div> 
