--- a/public/home.html
+++ b/public/home.html
@@ -177,7 +177,7 @@
           <i> Express.js</i>
           <i> MySQL</i>
           <i> jQuery</i>
-          <i> Jest</i>
+          <i> GraphQL/Apollo</i>
           <i> React</i>
           <i> MongoDB</i>
           <i> Session</i>
