added rid of it demo

--- a/public/home.html
+++ b/public/home.html
@@ -305,11 +305,11 @@
                       LetGo. Users can buy and sell products directly from their
                       mobile devices.
                     </p>
-                    <!-- <a
-                      href="https://project-bid-board.herokuapp.com/"
+                    <a
+                      href="https://docs.google.com/document/d/1RqLLDXGIVZbmIeRTsqYWFawWubpvGlAekAzbFZ4BH2Y/edit?usp=sharing"
                       class="btn btn-primary"
                       >Demo</a
-                    > -->
+                    >
                     <a
                       href="https://github.com/ccardinale98/rid-of-it"
                       class="btn btn-primary"
