added elec store demo

--- a/public/home.html
+++ b/public/home.html
@@ -339,7 +339,11 @@
                       A computer parts store that offers users a place to buy pc
                       components and/or plan out a new pc build.
                     </p>
-                    <!-- <a href="https://project-bid-board.herokuapp.com/" class="btn btn-primary">Demo</a> -->
+                    <a
+                      href="https://electronics-store-p3.herokuapp.com/"
+                      class="btn btn-primary"
+                      >Demo</a
+                    >
                     <a
                       href="https://github.com/ccardinale98/electronics-store"
                       class="btn btn-primary"
