--- a/public/home.html
+++ b/public/home.html
@@ -561,7 +561,7 @@
                     <div class="inner-circle" id="salvona-circle"></div>
                     <p class="h6 mt-3 mb-1">2015</p>
                     <p class="h6 text-muted mb-0 mb-lg-0">
-                      Salvona Technologies LLC
+                      Intern | Salvona Technologies LLC
                     </p>
                   </div>
                 </div>
@@ -577,7 +577,9 @@
                   >
                     <div class="inner-circle" id="rutgers-circle"></div>
                     <p class="h6 mt-3 mb-1">2016</p>
-                    <p class="h6 text-muted mb-0 mb-lg-0">Rutgers University</p>
+                    <p class="h6 text-muted mb-0 mb-lg-0">
+                      Student | Rutgers University
+                    </p>
                   </div>
                 </div>
                 <div class="timeline-step">
@@ -593,7 +595,7 @@
                     <div class="inner-circle" id="board-circle"></div>
                     <p class="h6 mt-3 mb-1">2017</p>
                     <p class="h6 text-muted mb-0 mb-lg-0">
-                      Hamilton Township School Board of Education
+                      Board Member | Hamilton Township School Board of Education
                     </p>
                   </div>
                 </div>
@@ -609,7 +611,9 @@
                   >
                     <div class="inner-circle" id="lifetime-circle"></div>
                     <p class="h6 mt-3 mb-1">2018</p>
-                    <p class="h6 text-muted mb-0 mb-lg-0">Lifetime Athletics</p>
+                    <p class="h6 text-muted mb-0 mb-lg-0">
+                      Lifeguard | Lifetime Athletics
+                    </p>
                   </div>
                 </div>
                 <div class="timeline-step mb-0">
@@ -625,7 +629,24 @@
                     <div class="inner-circle" id="coding-circle"></div>
                     <p class="h6 mt-3 mb-1">2021</p>
                     <p class="h6 text-muted mb-0 mb-lg-0">
-                      Rutgers Coding Bootcamp
+                      Student | Rutgers Coding Bootcamp
+                    </p>
+                  </div>
+                </div>
+                <div class="timeline-step">
+                  <div
+                    class="timeline-content"
+                    data-toggle="popover"
+                    data-trigger="hover"
+                    data-placement="top"
+                    title=""
+                    data-content="And here's some amazing content. It's very engaging. Right?"
+                    data-original-title="2010"
+                  >
+                    <div class="inner-circle" id="lifetime-circle"></div>
+                    <p class="h6 mt-3 mb-1">2021</p>
+                    <p class="h6 text-muted mb-0 mb-lg-0">
+                      Software Developer | My.Suit
                     </p>
                   </div>
                 </div>
