--- a/public/home.html
+++ b/public/home.html
@@ -643,7 +643,7 @@
                     data-content="And here's some amazing content. It's very engaging. Right?"
                     data-original-title="2010"
                   >
-                    <div class="inner-circle" id="lifetime-circle"></div>
+                    <div class="inner-circle" id="mysuit-circle"></div>
                     <p class="h6 mt-3 mb-1">2021</p>
                     <p class="h6 text-muted mb-0 mb-lg-0">
                       Software Developer | My.Suit
