--- a/public/home.html
+++ b/public/home.html
@@ -153,6 +153,15 @@
       </main>
 
       <div class="container" id="about-me">
+        <h1 id="about-me-h1">About Me</h1>
+        <p1 id="about-me-p1"
+          >Hi, my name is Cameron. I am a computer enthusiast who loves to code
+          and learn new technologies. In July 2021 I enrolled in the Rutgers
+          Coding Bootcamp to learn as much as I can about full-stack development
+          with HTML, CSS, and JavaScript. I am proficient in numerous JavaScript
+          frameworks, and SQLs. In the past I have dabbled with python for
+          back-end development and I am currently learning C#.
+        </p1>
         <div id="skillset-div">
           <h1 id="skillset">Skillset</h1>
           <i class="fab fa-js-square"> JavaScript</i>
