--- a/public/home.html
+++ b/public/home.html
@@ -147,7 +147,7 @@
               Click the left icons for social media and resume.
             </p>
             <hr class="my-4" />
-            <p>Scroll to learn more about me.</p>
+            <p class="mt-9">Scroll to learn more about me.</p>
           </div>
         </div>
       </main>
@@ -156,25 +156,29 @@
         <div id="skillset-div">
           <h1 id="skillset">Skillset</h1>
           <i class="fab fa-js-square"> JavaScript</i>
+          <i class="fab fa-react"> React.js</i>
+          <i class="fab fa-node-js"> Node.js</i>
           <i class="fab fa-html5"> HTML5</i>
           <i class="fab fa-css3-alt"> CSS3</i>
           <i class="fab fa-bootstrap"> Bootstrap</i>
-          <i class="fab fa-node-js"> Node.js</i>
-          <i class="fab fa-react"> React</i>
           <i class="fab fa-github"> Git</i>
+          <i class="fab fa-aws"> AWS EC2</i>
 
           <h1 id="skillset">Frameworks and Other Technologies</h1>
-          <i> Heroku</i>
-          <i> Express.js</i>
+
           <i> MySQL</i>
-          <i> jQuery</i>
+          <i> ASP</i>
+          <i> VB Script</i>
+          <i> Server SQL</i>
           <i> GraphQL/Apollo</i>
-          <i> React</i>
           <i> MongoDB</i>
           <i> Session</i>
           <i> REST API</i>
           <i> Redux</i>
           <i> React Native</i>
+          <i> jQuery</i>
+          <i> Heroku</i>
+          <i> Express.js</i>
         </div>
       </div>
 
@@ -503,9 +507,9 @@
           <div class="row text-center justify-content-center mb-5">
             <div class="col-xl-6 col-lg-8">
               <p class="text-muted">
-                This is a timeline of my work experience and schooling since my
-                first job. The year associated with each job/school is the year
-                that I started working there.
+                This is a timeline of my work experience and schooling. The year
+                associated with each job/school is the year that I started
+                working there.
                 <strong
                   >Click on the circles to see a description of that job/school.
                   Double click to be redirected for more information.</strong
