--- a/public/home.html
+++ b/public/home.html
@@ -156,6 +156,7 @@
         <div id="skillset-div">
           <h1 id="skillset">Skillset</h1>
           <i class="fab fa-js-square"> JavaScript</i>
+          <i class="fab fa-hashtag"> C#</i>
           <i class="fab fa-react"> React.js</i>
           <i class="fab fa-node-js"> Node.js</i>
           <i class="fab fa-html5"> HTML5</i>
